Started using blogracy in the plugin. Started logging infrastructure.

--- a/userRss/src/plugin.properties
+++ b/userRss/src/plugin.properties
@@ -22,6 +22,6 @@
 
 plugin.class=it.unipr.aotlab.userRss.UserRSS
 plugin.id=userrss
-plugin.name=Tesi_Laurea - Example Plugin
+plugin.name=Blogracy
 plugin.version=0.1
 plugin.langfile=messages.Messages
