Moving to "Blogracy". Old code is dying.

--- a/userRss/src/plugin.properties
+++ b/userRss/src/plugin.properties
@@ -20,7 +20,7 @@
 # THE SOFTWARE.
 #
 
-plugin.class=it.unipr.aotlab.userRss.UserRSS
+plugin.class=it.unipr.aotlab.userRss.Blogracy
 plugin.id=userrss
 plugin.name=Blogracy
 plugin.version=0.1
