--- a/userRss/src/plugin.properties
+++ b/userRss/src/plugin.properties
@@ -21,7 +21,7 @@
 #
 
 plugin.class=it.unipr.aotlab.userRss.Blogracy
-plugin.id=userrss
+plugin.id=blogracy
 plugin.name=Blogracy
 plugin.version=0.1
 plugin.langfile=messages.Messages
