Full rename: userRss is dead.

--- a/userRss/src/plugin.properties
+++ b/userRss/src/plugin.properties
@@ -20,7 +20,7 @@
 # THE SOFTWARE.
 #
 
-plugin.class=it.unipr.aotlab.userRss.Blogracy
+plugin.class=it.unipr.aotlab.blogracy.Blogracy
 plugin.id=blogracy
 plugin.name=Blogracy
 plugin.version=0.1
