--- a/blogracy/src/plugin.properties
+++ b/blogracy/src/plugin.properties
@@ -20,7 +20,7 @@
 # THE SOFTWARE.
 #
 
-plugin.class=it.unipr.aotlab.blogracy.UserRSS
+plugin.class=it.unipr.aotlab.blogracy.Blogracy
 plugin.id=userrss
 plugin.name=Blogracy
 plugin.version=0.1
