--- a/build.xml
+++ b/build.xml
@@ -2,22 +2,74 @@
 
 
 	<property name="src.dir"     value="blogracy/src" />
-    <property name="lib.dir"     value="lib"/>
-    <path id="classpath">
-        <fileset dir="${lib.dir}" includes="**/*.jar"/>
-    </path>
+	<property name="lib.dir"     value="lib"/>
+
+	<path id="classpath">
+		<fileset dir="${lib.dir}" includes="**/*.jar"/>
+	</path>
+
 	<property name="build.dir"   value="build"/>
 	<property name="classes.dir" value="${build.dir}/config/blogracy"/>
 
-	<!-- property name="main-class"  value="oata.HelloWorld"/ -->
+	<property name="maven-ant-tasks.jar" value="maven-ant-tasks-2.1.3.jar" />
+	<property name="maven-ant-tasks.path" 
+		value="${lib.dir}${file.separator}${maven-ant-tasks.jar}"/>
+		<property name="maven-ant-tasks.url" 
+			value="http://www.apache.org/dyn/closer.cgi/maven/binaries/${maven-ant-tasks.jar}"/>
+			<available property="maven-ant-tasks.exists" file="${maven-ant-tasks.path}"/>
+			<echo>${maven-ant-tasks.exists}</echo>
+			<!-- property name="main-class"  value="oata.HelloWorld"/ -->
 
-	<target name="clean">
-		<delete dir="build"/>
-	</target>
+			<!-- This will download the "latest version" of the maven-ant-tasks if needed -->
 
-	<target name="compile">
-		<mkdir dir="${classes.dir}"/>
-		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" />
-	</target>
 
-</project>
+			<target name="mvn-ant-tasks-download" unless="maven-ant-tasks.exists">
+				<mkdir dir="${lib.dir}"/>
+				<get src="${maven-ant-tasks.url}" dest="${maven-ant-tasks.path}"/>
+			</target>
+
+			<target name="mvn-init" 
+				depends="mvn-ant-tasks-download"
+				unless="compile.classpath" xmlns:artifact="urn:maven-artifact-ant">
+				<typedef resource="org/apache/maven/artifact/ant/antlib.xml" 
+					uri="urn:maven-artifact-ant"
+					classpath="${maven-ant-tasks.path}"/>
+					<condition property="maven.repo.local" value="${maven.repo.local}" else="${user.home}/.m2/repository">
+						<isset property="maven.repo.local"/>
+					</condition>
+					<echo>maven.repo.local=${maven.repo.local}</echo>
+					<artifact:localRepository id="local.repository" path="${maven.repo.local}"/>
+					<artifact:pom file="pom.xml" id="blogracy.project"/>
+					<artifact:dependencies pathId="compile.classpath" filesetId="compile.fileset" useScope="compile">
+						<pom refid="blogracy.project"/>
+						<localRepository refid="local.repository"/>
+					</artifact:dependencies>
+
+					<artifact:dependencies pathId="test.classpath" filesetId="test.fileset" useScope="test">
+						<pom refid="blogracy.project"/>
+						<localRepository refid="local.repository"/>
+					</artifact:dependencies>
+
+					<artifact:dependencies pathId="runtime.classpath" filesetId="runtime.fileset" useScope="runtime">
+						<pom refid="blogracy.project"/>
+						<localRepository refid="local.repository"/>
+					</artifact:dependencies>
+					
+					<path id="full-classpath">
+						<path refid="classpath" />
+						<path refid="compile.classpath" />
+					</path>
+
+				</target>
+
+				<target name="clean">
+					<delete dir="build"/>
+				</target>
+
+				<target name="compile" depends="mvn-init">
+					<mkdir dir="${classes.dir}"/>
+					<javac srcdir="${src.dir}" destdir="${classes.dir}" 
+						classpathref="full-classpath" />
+					</target>
+
+				</project>
