--- a/build.xml
+++ b/build.xml
@@ -5,6 +5,7 @@
     <!-- General properties and class paths -->
     <property name="src.dir" value="blogracy/src"/>
     <property name="lib.dir" value="lib"/>
+    <property name="package.prefix" value="it/unipr/aotlab/blogracy" />
 
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
@@ -114,6 +115,12 @@
         <mkdir dir="${classes.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}"
                classpathref="full-classpath"/>
+    </target>
+
+    <target name="deploy-static-files">
+        <copy todir="${classes.dir}">
+            <path path="${src.dir}/${package.prefix}/resources/" />
+        </copy>
     </target>
 
     <target name="build" depends="compile"
