--- a/src/main/config/blogracyUrl.config
+++ b/src/main/config/blogracyUrl.config
@@ -22,12 +22,12 @@
     {
         "regexpString": "^/css/(?:.*)$",
         "classString": "it.unipr.aotlab.blogracy.web.resolvers.StaticFileResolver",
-        "startingParameters": []
+        "startingParameters": ["/build/config/plugins/blogracy/static"]
     },
     {
         "regexpString": "^/scripts/(?:.*)$",
         "classString": "it.unipr.aotlab.blogracy.web.resolvers.StaticFileResolver",
-        "startingParameters": []
+        "startingParameters": ["/build/config/plugins/blogracy/static"]
     },
     {
         "regexpString": "^/followers$",
