--- a/src/main/config/blogracyPaths.properties
+++ b/src/main/config/blogracyPaths.properties
@@ -20,5 +20,4 @@
 # THE SOFTWARE.
 #
 
-
-blogracy.paths.root = build/config/plugins/blogracy
+blogracy.paths.root =  ${project.build.outputDirectory}
