--- a/src/main/config/blogracyPaths.properties
+++ b/src/main/config/blogracyPaths.properties
@@ -20,4 +20,5 @@
 # THE SOFTWARE.
 #
 
-blogracy.paths.root =  ${project.build.outputDirectory}
+blogracy.paths.root =     ${project.build.outputDirectory}
+blogracy.paths.templates = ${project.build.outputDirectory}/templates
