added config for a cache folder

--- a/src/main/config/blogracyPaths.properties
+++ b/src/main/config/blogracyPaths.properties
@@ -22,3 +22,4 @@
 
 blogracy.paths.root =     ${project.build.outputDirectory}
 blogracy.paths.templates = ${project.build.outputDirectory}/templates
+blogracy.paths.cached = ${project.build.outputDirectory}/cache
