resolver based on magnet-uris

--- a/src/main/config/blogracyUrl.config
+++ b/src/main/config/blogracyUrl.config
@@ -15,6 +15,11 @@
         "startingParameters": []
     },
     {
+        "regexpString": "^/magnet/([^/]*)$",
+        "classString": "it.unipr.aotlab.blogracy.web.resolvers.MagnetResolver",
+        "startingParameters": ["${project.build.outputDirectory}/cache"]
+    },
+    {
         "regexpString": "^/messages$",
         "classString": "it.unipr.aotlab.blogracy.web.resolvers.MessagesResolver",
         "startingParameters": []
