resolver for new blog posts

--- a/src/main/config/blogracyUrl.config
+++ b/src/main/config/blogracyUrl.config
@@ -20,6 +20,11 @@
         "startingParameters": ["${project.build.outputDirectory}/cache"]
     },
     {
+        "regexpString": "^/post$",
+        "classString": "it.unipr.aotlab.blogracy.web.resolvers.PostResolver",
+        "startingParameters": []
+    },
+    {
         "regexpString": "^/messages$",
         "classString": "it.unipr.aotlab.blogracy.web.resolvers.MessagesResolver",
         "startingParameters": []
