config file for local user and friends

--- a/src/main/config/blogracyUser.properties
+++ b/src/main/config/blogracyUser.properties
@@ -20,7 +20,7 @@
 # THE SOFTWARE.
 #
 
-blogracy.user.hash      = W3W7TSICZWSCUK4R7C7HMQ633GRL6YPU mic
+blogracy.user.user      = W3W7TSICZWSCUK4R7C7HMQ633GRL6YPU mic
 blogracy.user.friends.1 = BLANNBXOHECW2MWHVN5AU5X4KCDDIQJZ rik0
 blogracy.user.friends.2 = QG3PKBZU2F6CZ7AWBT6AP3BRXG6NFKI6 uno
 blogracy.user.friends.3 = GDG7OPX7FJMWV74IYR2VMDPIHW5KPU2G due
