started using shindig

--- a/blogracy-web/pom.xml
+++ b/blogracy-web/pom.xml
@@ -13,6 +13,12 @@
  
   <dependencies>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.9</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.jetty.aggregate</groupId>
       <artifactId>jetty-all-server</artifactId>
       <version>${jettyVersion}</version>
@@ -38,9 +44,9 @@
       <version>5.5.1</version>
     </dependency>
     <dependency>
-      <groupId>rome</groupId>
-      <artifactId>rome</artifactId>
-      <version>1.0</version>
+      <groupId>org.apache.shindig</groupId>
+      <artifactId>shindig-social-api</artifactId>
+      <version>3.0.0-beta4</version>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
