Removed hardcoded paths. Added -Dazureus.config option to pom.

--- a/blogracy-vuze/pom.xml
+++ b/blogracy-vuze/pom.xml
@@ -24,6 +24,7 @@
         <configuration>
           <executable>java</executable>
           <arguments>
+            <argument>-Dazureus.config.path=.</argument>
             <argument>-classpath</argument>
             <classpath/>
             <argument>net.blogracy.Blogracy</argument>
