--- a/blogracy-web/src/main/config/blogracyPaths.properties
+++ b/blogracy-web/src/main/config/blogracyPaths.properties
@@ -20,5 +20,5 @@
 # THE SOFTWARE.
 #
 
-blogracy.paths.root =      /home/mic/blogracy/blogracy-web/src/main/webapp
-blogracy.paths.cache =     /home/mic/blogracy/blogracy-web/src/main/webapp/cache
+blogracy.paths.root =      src/main/webapp
+blogracy.paths.cache =     src/main/webapp/cache
