plugin.properties automatically copied to target/plugins/blogracy/

--- a/blogracy-vuze/pom.xml
+++ b/blogracy-vuze/pom.xml
@@ -9,8 +9,8 @@
   <build>
     <resources>
       <resource>
-        <directory>src/main/resources</directory>
-	<targetPath>../</targetPath>
+        <directory>src/main/plugins</directory>
+	<targetPath>../plugins/</targetPath>
       </resource>
     </resources>
     <plugins>
