--- a/blogracy-web/src/main/config/blogracyPaths.properties
+++ b/blogracy-web/src/main/config/blogracyPaths.properties
@@ -20,5 +20,6 @@
 # THE SOFTWARE.
 #
 
-blogracy.paths.root =      ./src/main/webapp
-blogracy.paths.cache =     ./src/main/webapp/cache
+blogracy.paths.root =      src/main/webapp
+blogracy.paths.cache =     src/main/webapp/cache
+
