--- a/blogracy-web/pom.xml
+++ b/blogracy-web/pom.xml
@@ -19,7 +19,7 @@
 	  <groupId>org.eclipse.jetty.aggregate</groupId>
       <artifactId>jetty-all-server</artifactId>
       <version>${jettyVersion}</version>
-    </dependency>
+    </dependency>           
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty-util</artifactId>
@@ -60,6 +60,16 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.0.0</version>
     </dependency>
+	<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.2</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.2</version>
+	</dependency>
   </dependencies>
 
   <build>
